tests/machine/x/kotlin/group_by_having.error
line 66:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_by_having.kt:66:42: error: unresolved reference: g
        __res.add(mutableMapOf("city" to g.key, "num" to count(g)))
                                         ^
/workspace/mochi/tests/machine/x/kotlin/group_by_having.kt:66:64: error: unresolved reference: g
        __res.add(mutableMapOf("city" to g.key, "num" to count(g)))
                                                               ^
/workspace/mochi/tests/machine/x/kotlin/group_by_having.kt:72:5: error: unresolved reference: json
    json(big)
    ^

 65:     for (p in people) {
 66:         __res.add(mutableMapOf("city" to g.key, "num" to count(g)))
 67:     }
